{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "a8a16927-b96f-97fa-83a0-4dadf11420f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bfd23bc25c60d5a1",
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:instance/i-0b8caf88413004754",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8caf88413004754",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BasKEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00939ed43ae445964",
            "private_dns": "ip-10-0-0-253.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.253",
            "public_dns": "ec2-3-36-65-84.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.65.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3853d1d0ab4052a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbc9952b463d04e9",
            "tags": {
              "Name": "ohBastion"
            },
            "tags_all": {
              "Name": "ohBastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0034a5ab57f8f77ba"
            ]
          },
          "dependencies": [
            "aws_security_group.oh_bastion_sg",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ohIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:internet-gateway/igw-0fb671f56fed083ed",
            "id": "igw-0fb671f56fed083ed",
            "owner_id": "589634832240",
            "tags": {
              "Name": "ohIGW"
            },
            "tags_all": {
              "Name": "ohIGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ohPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fb671f56fed083ed",
            "id": "r-rtb-0ad1539b6f83f3bb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad1539b6f83f3bb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ohIGW",
            "aws_route_table.ohPublicRT",
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:route-table/rtb-05fe56a22e062b5c6",
            "id": "rtb-05fe56a22e062b5c6",
            "owner_id": "589634832240",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ohPrivate-RT"
            },
            "tags_all": {
              "Name": "ohPrivate-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:route-table/rtb-0ad1539b6f83f3bb2",
            "id": "rtb-0ad1539b6f83f3bb2",
            "owner_id": "589634832240",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ohPublic-RT"
            },
            "tags_all": {
              "Name": "ohPublic-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohPublicSubnetAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c35057b50bbc319e",
            "route_table_id": "rtb-0ad1539b6f83f3bb2",
            "subnet_id": "subnet-0fbc9952b463d04e9"
          },
          "dependencies": [
            "aws_route_table.ohPublicRT",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3c8a5e29c32ecad",
            "route_table_id": "rtb-0ad1539b6f83f3bb2",
            "subnet_id": "subnet-02136d78aa3362a72"
          },
          "dependencies": [
            "aws_route_table.ohPublicRT",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oh_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:security-group/sg-06202626808a01fda",
            "description": "Enable SSH, HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06202626808a01fda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ohALBSG",
            "name_prefix": "",
            "owner_id": "589634832240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ohALBSG"
            },
            "tags_all": {
              "Name": "ohALBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oh_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:security-group/sg-0034a5ab57f8f77ba",
            "description": "Enable SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0034a5ab57f8f77ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ohBastionSG",
            "name_prefix": "",
            "owner_id": "589634832240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ohBastionSG"
            },
            "tags_all": {
              "Name": "ohBastionSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oh_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:security-group/sg-0a05e0450d27ef5b0",
            "description": "Allow all inbound traffic from ohPublicSG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a05e0450d27ef5b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0034a5ab57f8f77ba"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06202626808a01fda"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ohPrivateSG",
            "name_prefix": "",
            "owner_id": "589634832240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ohPrivateSG"
            },
            "tags_all": {
              "Name": "ohPrivateSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.oh_alb_sg",
            "aws_security_group.oh_bastion_sg",
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oh_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:security-group/sg-0fa8522d0d392bbc5",
            "description": "RDS in and out",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa8522d0d392bbc5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a05e0450d27ef5b0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ohRDSSG",
            "name_prefix": "",
            "owner_id": "589634832240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ohRDSSG"
            },
            "tags_all": {
              "Name": "ohRDSSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.oh_alb_sg",
            "aws_security_group.oh_bastion_sg",
            "aws_security_group.oh_private_sg",
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohPublicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:subnet/subnet-0fbc9952b463d04e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbc9952b463d04e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "589634832240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ohPublic-SN-1"
            },
            "tags_all": {
              "Name": "ohPublic-SN-1"
            },
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "dependencies": [
            "aws_vpc.ohVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:subnet/subnet-02136d78aa3362a72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02136d78aa3362a72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "589634832240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ohPublic-SN-2"
            },
            "tags_all": {
              "Name": "ohPublic-SN-2"
            },
            "vpc_id": "vpc-0ab2f91a582fa1cbc"
          },
          "dependencies": [
            "aws_vpc.ohVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ohVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:vpc/vpc-0ab2f91a582fa1cbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089946d33ee81fa78",
            "default_route_table_id": "rtb-0f23f615cafeee562",
            "default_security_group_id": "sg-0500f73786715042d",
            "dhcp_options_id": "dopt-031d2f2c4acd1c150",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab2f91a582fa1cbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f23f615cafeee562",
            "owner_id": "589634832240",
            "tags": {
              "Name": "ohVPC"
            },
            "tags_all": {
              "Name": "ohVPC"
            }
          }
        }
      ]
    }
  ]
}